--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="test_tutorial.html">Microbiome Anlaysis Pipeline</a>
+  <a href="microbiome_report.html">Microbiome Anlaysis Pipeline</a>
 </li>
 <li>
   <a href="networks_tutorial.html">Advanced Tutorials</a>
