--- a/index.html
+++ b/index.html
@@ -180,10 +180,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="microbiome_report.html">Microbiome Anlaysis Pipeline</a>
-</li>
-<li>
-  <a href="networks_tutorial.html">Advanced Tutorials</a>
+  <a href="Example_report.html">Microbiome Anlaysis</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
