--- a/microbiome_tutorial.html
+++ b/microbiome_tutorial.html
@@ -61,6 +61,7 @@ code > span.at { } /* Attribute */
 code > span.in { color: #008000; } /* Information */
 </style>
 
+<link rel="stylesheet" href="readthedown.css" type="text/css" />
 
 </head>
 
@@ -79,15 +80,7 @@ code > span.in { color: #008000; } /* Information */
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>
-  <a href="index.html">Home</a>
-</li>
-<li>
-  <a href="Example_report.html">Microbiome Analysis (microbiomeutilities)</a>
-</li>
-<li>
-  <a href="microbiome_tutorial.html">Microbiome Anlaysis Tutorial</a>
-</li>
+        
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
