--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        
+        <li>
+  <a href="index.html">Home</a>
+</li>
+<li>
+  <a href="Example_report.html">Microbiome Analysis (microbiomeutilities)</a>
+</li>
+<li>
+  <a href="microbiome_tutorial.html">Microbiome Anlaysis Tutorial</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
