--- a/microbiome_tutorial.html
+++ b/microbiome_tutorial.html
@@ -80,7 +80,15 @@ code > span.in { color: #008000; } /* Information */
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        
+        <li>
+  <a href="index.html">Home</a>
+</li>
+<li>
+  <a href="Example_report.html">Microbiome Analysis (microbiomeutilities)</a>
+</li>
+<li>
+  <a href="microbiome_tutorial.html">Microbiome Anlaysis Tutorial</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
