--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@ $(document).ready(function () {
 <div id="tutorials" class="section level1">
 <h1>Tutorials</h1>
 <p><strong>This website is still being developed, please do not use any of the information linked for analysis.</strong></p>
+<ul>
+<li><p><a href="microbiome_tutorial.html">Microbiome Anlaysis Tutorial</a></p></li>
+<li><p><a href="Example_report.html">Microbiome Analysis (microbiomeutilities)</a></p></li>
+</ul>
 </div>
 </div>
 
