--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ $(document).ready(function () {
 <div id="main">
 <div id="tutorials" class="section level1">
 <h1>Tutorials</h1>
-<p><strong>This website is still being developed, please do not use any of the information linked for analysis.</strong></p>
+<p><strong>This website is under active development. NO warranty for any damages is given by the developers of this webpage. USE AT OWN RISK. Content can change anytime without prior notice.</strong></p>
 <ul>
 <li><p><a href="microbiome_tutorial.html">Microbiome Anlaysis Tutorial</a></p></li>
 <li><p><a href="Example_report.html">Microbiome Analysis (microbiomeutilities)</a></p></li>
